--- a/index.html
+++ b/index.html
@@ -247,7 +247,9 @@
             padding: 0;
             margin: 0;
         }
-
+        p a {
+            color: #272F37;
+        }
         span {
             font-family: 'poppins-regular', sans-serif;
         }
@@ -369,7 +371,7 @@
                                             <img src="img/header-logo.png" width="32" height="32" alt="worksection logo"
                                                 border="0" style="vertical-align: middle;margin-right: 12px;">
                                             <span
-                                                style="font-size: 16px;line-height: 1;font-family: 'Montserrat-Bold',sans-serif;color: #ffffff;vertical-align: middle;">worksection</span>
+                                                style="font-weight: 700;font-size: 16px;line-height: 1;font-family: 'Montserrat-Bold',sans-serif;color: #ffffff;vertical-align: middle;">worksection</span>
                                         </a>
                                     </td>
                                     <td align="right">
@@ -411,7 +413,7 @@
                                 Діаграми Ганта, і поліпшили інший функціонал системи.
                             </p>
                             <p class="pb-30">
-                                Пропонуємо вам безкоштовний тиждень, щоб ознайомитися з останніми змінами. Просто
+                                Пропонуємо вам <b>безкоштовний тиждень</b>, щоб ознайомитися з останніми змінами. Просто
                                 натисніть кнопку нижче і наші фахівці все зроблять:
                             </p>
                             <!-- Button : START -->
@@ -581,23 +583,23 @@
                                         <center>
                                             <a target="_blank" href="https://t.me/worksection_ua" class="btn social-link"
                                                 style="margin-left: 9px;margin-right: 7px;">
-                                                <img src="img/telegram.png" alt="telegram" width="30" height="30">
+                                                <img src="img/telegram.png" alt="telegram" width="32" height="32">
                                             </a>
                                             <a target="_blank" href="https://www.youtube.com/c/Worksection-de/videos" class="btn  social-link"
                                                 style="margin-left: 9px;margin-right: 7px;">
-                                                <img src="img/youtube.png" alt="youtube" width="30" height="30">
+                                                <img src="img/youtube.png" alt="youtube" width="32" height="32">
                                             </a>
                                             <a target="_blank" href="https://www.linkedin.com/company/worksection" class="btn  social-link"
                                                 style="margin-left: 9px;margin-right: 7px;">
-                                                <img src="img/linkedin.png" alt="linkedin" width="30" height="30">
+                                                <img src="img/linkedin.png" alt="linkedin" width="32" height="32">
                                             </a>
                                             <a target="_blank" href="https://www.facebook.com/worksection.official" class="btn social-link"
                                                 style="margin-left: 9px;margin-right: 7px;">
-                                                <img src="img/facebook.png" alt="facebook" width="30" height="30">
+                                                <img src="img/facebook.png" alt="facebook" width="32" height="32">
                                             </a>
                                             <a target="_blank" href="https://twitter.com/worksection" class="btn social-link"
                                                 style="margin-left: 9px;margin-right: 7px;">
-                                                <img src="img/twitter.png" alt="twitter" width="30" height="30">
+                                                <img src="img/twitter.png" alt="twitter" width="32" height="32">
                                             </a>
                                         </center>
                                     </td>
