--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         body {
             margin: 0 auto !important;
             padding: 0 !important;
-            height: 100% !important;
+            /* height: 100% !important; */
             width: 100% !important;
 
             background-color: gray;
